# pocket-nori

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEX_BRIEF.md  DOCS.md  POST_MVP_HARDENING_PLAN.md  PROGRESS.md  competitive-analysis.md  farz-prd.md  farz-tech-requirements-mvp.md  farz-ui-spec.md  linear-missing-issues.md  pocket-nori-prd.md  pocket-nori-tech-requirements-mvp.md  pocket-nori-ui-spec.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  rls-test.yml
.interface-design/: system.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
Later stages/: farz-tech-review.md
agent_docs/: CODEX_BRIEF.md  CODEX_REQUESTS_FOR_CLAUDE.md
docs/later-stages/: farz-tech-requirements-full.md  farz-tech-requirements.md  farz-tech-review-v2.md  pocket-nori-tech-requirements-full.md  pocket-nori-tech-requirements.md  pocket-nori-tech-review-v2.md  pocket-nori-tech-review.md
docs/specs/: POCKET_NORI_MASTER_SPEC.md  Pydantic_schema.md  Topic_intelligence.md
docs/working-notes/: PROGRESS.md
farz-ui-mockups/: brief.html  dashboard.html  index.html  meeting-detail.html  search-arc.html
frontend/: package-lock.json  package.json
migrations/: 001_core_schema.sql  002_junction_rls.sql  003_google_tokens.sql  005_commitment_status_alignment.sql  006_calendar_sync_indexes.sql  007_topic_clusters.sql  009_rich_embeddings.sql  011_chat_sessions.sql  012_conversation_category.sql  014_topic_node_bridge.sql  015_provenance_links.sql  016_topic_node_cutover.sql  017_entity_nodes.sql  018_knowledge_edges.sql
pocket-nori-ui-mockups/: brief.html  search-arc.html  shared.css
scripts/: create_linear_issues.py  generate_linear_csv.py  qa_check.py  run_rollout_backfill.py
spikes/: PHASE_0A_SUMMARY.md  Untitled
spikes/spike1_electron_audio/: .env.example  FINDINGS.md  README.md  package.json
spikes/spike2_deepgram/: .env.example  FINDINGS.md
spikes/spike3_llm_extraction/: FINDINGS.md  requirements.txt
spikes/spike4_supabase_rls/: .gitignore  FINDINGS.md  setup_test_users.py  test_rls_isolation.py
spikes/spike5_celery_redis/: .env.example  FINDINGS.md  celeryconfig.py  decision_memo.md  tasks.py
src/: calendar_client.py  celery_app.py  celeryconfig.py  commitment_utils.py  config.py  database.py  drive_client.py  entity_node_store.py  entity_utils.py  knowledge_graph.py  llm_client.py  main.py  topic_cluster_store.py  topic_node_store.py  topic_utils.py
src/api/: deps.py  schema_guards.py
src/models/: __init__.py  brief.py  commitment.py  connection.py  conversation.py  entity.py  index.py  topic.py  topic_arc.py  transcript_segment.py
src/workers/: combined.py  embed.py  extract.py  ingest.py  prep.py  (+1 more)
tests/: conftest.py  test_admin.py  test_auth_routes.py  test_briefs.py  test_calendar.py  test_chat.py  test_commitments.py  test_config.py  test_connections.py  test_conversation_category.py  test_draft.py  test_entities.py  test_extract.py  test_graph.py  test_home.py  test_index_stats.py  test_ingest.py  test_llm_client.py  test_rls_isolation.py  test_search.py  test_topic_cluster_store.py  test_topic_utils.py  test_topics.py  test_upcoming_briefs.py  test_workers.py
(+76 files in other folders)
