[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pocket-nori"
version = "0.1.0"
description = "Personal intelligence layer for working professionals"
requires-python = ">=3.13"
dependencies = [
    # API framework
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.8.0",
    # LLM
    "anthropic>=0.49.0",
    "instructor>=1.7.2",
    # Database
    "supabase>=2.15.1",
    # Auth / JWT
    "python-jose[cryptography]>=3.3.0",
    # Task queue
    "celery>=5.4.0",
    "redis>=5.2.1",
    # Transcription
    "deepgram-sdk>=3.9.0",
    # HTTP client
    "httpx>=0.28.1",
    # Config
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.5",
    "pytest-anyio>=0.0.0",
    "anyio>=4.12.1",
    # Type checking
    "mypy>=1.14.0",
    "types-redis>=4.6.0",
    "types-python-jose>=3.3.4",
    # Linting / formatting
    "ruff>=0.9.10",
    # Pre-commit
    "pre-commit>=4.1.0",
]

# ---------------------------------------------------------------------------
# Tool: ruff (linting + formatting)
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    "scripts",
    "spikes",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print (no stray print statements)
    "RUF",  # ruff-specific rules
]
ignore = [
    "S101",  # assert — allowed in tests
    "B008",  # FastAPI Depends() in function signature
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S107", "E501"]  # Allow assert + hardcoded test credentials; mock chains exceed line limit
"src/llm_client.py" = ["E501"]  # Prompt strings cannot be wrapped without affecting the LLM
"src/api/routes/search.py" = ["S608"]  # pgvector SQL uses f-strings for safe internal constants only (score threshold, date clauses)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Tool: mypy (type checking)
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "deepgram.*", "instructor.*", "jose.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Tool: pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
